Fix for spacing

--- a/static/css/sass/_cues.sass
+++ b/static/css/sass/_cues.sass
@@ -2,4 +2,4 @@
     display: flex
     flex-wrap: nowrap
     overflow-x: scroll
-    height: 39vh
+    height: 37vh
