--- a/static/css/sass/_tombstone.sass
+++ b/static/css/sass/_tombstone.sass
@@ -2,7 +2,7 @@
     display: flex
     flex-wrap: wrap
     padding-left: 0.5em
-    height: 89vh
+    height: 87vh
     overflow-y: scroll
 
 .tombstone
